--- a/configs/data.yaml
+++ b/configs/data.yaml
@@ -1,3 +1,3 @@
-train: r"C:\Users\PC\Desktop\turkish-tsl-translation\dataset\train-tr2tsl-wordbased.txt"
-valid: r"C:\Users\PC\Desktop\turkish-tsl-translation\dataset\valid-tr2tsl-wordbased.txt"
-test: r"C:\Users\PC\Desktop\turkish-tsl-translation\dataset\test-tr2tsl-wordbased.txt"
+train: 'C:\Users\PC\Desktop\turkish-tsl-translation\dataset\train-tr2tsl-wordbased.txt'
+valid: 'C:\Users\PC\Desktop\turkish-tsl-translation\dataset\valid-tr2tsl-wordbased.txt'
+test: 'C:\Users\PC\Desktop\turkish-tsl-translation\dataset\test-tr2tsl-wordbased.txt'
