--- a/configs/data.yaml
+++ b/configs/data.yaml
@@ -1,4 +1,4 @@
-path: 'datasets'
+path: 'dataset'
 train: 'train-tr2tsl-wordbased.txt'
 valid: 'valid-tr2tsl-wordbased.txt'
 test: 'test-tr2tsl-wordbased.txt'
