--- a/configs/data.yaml
+++ b/configs/data.yaml
@@ -1,4 +1,4 @@
 path: 'dataset'
-train: 'new_train.txt'
-valid: 'new_valid.txt'
-test: 'new_test.txt'
+train: 'dataset_split_train.txt'
+valid: 'dataset_split_val.txt'
+test: 'dataset_split_test.txt'
