--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,16 +12,16 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             // // RNN-BASED TRAIN
-            // "args": ["--model-config", "configs\\networks\\rnn-based.yaml", "--token-type", "char", "--batch-size", "4"]
+            "args": ["--model-config", "configs/networks/rnn-based.yaml", "--token-type", "word", "--batch-size", "128", "--validation-step", "10", "--num-epochs", "1"]
             
             // RNN-BASED TEST and EVAL
             // "args": ["--exp-path", "results/rnn-based/12", "--model-config", "configs/networks/rnn-based.yaml"]
             
             // TRANSFORMER TRAIN
-            // "args": ["--model-config", "configs/networks/transformer.yaml", "--num-epochs", "200", "--token-type", "word", "--batch-size", "128", "--validation-step", "10"]
+            // "args": ["--model-config", "configs/networks/transformer.yaml", "--num-epochs", "2", "--token-type", "word", "--batch-size", "128", "--validation-step", "10"]
             
             // TRANSFORMER TEST and EVAL
-            "args": ["--model-config", "configs/networks/transformer.yaml", "--exp-path", "results/transformer/9"]
+            // "args": ["--model-config", "configs/networks/transformer.yaml", "--exp-path", "results/transformer/9"]
 
         }
     ]
