multiple model parameters are now supported

--- a/configs/networks/rnn-based.yaml
+++ b/configs/networks/rnn-based.yaml
@@ -1,9 +1,15 @@
 model-parameters:
-  embedding-dim: 256
-  units: 256
-  layer-type: "blstm"
-  n-layers: 1
-  attention-type: "luong"
+  embedding-dim: 
+    - 256
+    - 512
+  units: 
+    - 256
+  layer-type: 
+    - "blstm"
+  n-layers: 
+    - 1
+  attention-type: 
+    - "luong"
 
 experiment-parameters:
   root-path: "results"
