--- a/configs/networks/transformer.yaml
+++ b/configs/networks/transformer.yaml
@@ -1,11 +1,28 @@
 model-parameters:
-  n-layers: 1
-  d-model: 512
-  dff: 512
-  dropout: 0.2
-  n-heads: 4
-  input-pos-encoding: 1000
-  target-pos-encoding: 1000
+  n-layers: 
+    - 1
+    - 2
+  d-model:
+    - 512
+    - 256
+    - 128
+    - 64
+  dff: 
+    - 512
+    - 256
+    - 128
+    - 64
+  dropout: 
+    - 0.2
+    - 0.1
+    - 0.0
+  n-heads: 
+    - 4
+    - 2
+  input-pos-encoding: 
+    - 1000
+  target-pos-encoding: 
+    - 1000
 
 experiment-parameters:
   root-path: "results"
